--- a/test/LaTeXAndHTML/succeed/Issue2623.html
+++ b/test/LaTeXAndHTML/succeed/Issue2623.html
@@ -13,7 +13,7 @@
   <a id="124" class="Keyword">mutual</a>
 \end{code}<a id="141" class="Comment">}
 </a>\begin{code}
-    <a id="160" class="Keyword">postulate</a> <a id="A" href="Issue2623.html#A" class="Postulate">A</a> <a id="172" class="Symbol">:</a> <a id="174" class="PrimitiveType">Set</a>
+    <a id="160" class="Keyword">postulate</a> <a id="A"></a><a id="170" href="Issue2623.html#170" class="Postulate">A</a> <a id="172" class="Symbol">:</a> <a id="174" class="PrimitiveType">Set</a>
 \end{code}<a id="188" class="Comment">
 More text.
 \begin{AgdaMultiCode}
@@ -21,7 +21,7 @@ More text.
   <a id="237" class="Keyword">mutual</a>
 \end{code}<a id="254" class="Comment">
 </a>\begin{code}
-    <a id="272" class="Keyword">postulate</a> <a id="B" href="Issue2623.html#B" class="Postulate">B</a> <a id="284" class="Symbol">:</a> <a id="286" class="PrimitiveType">Set</a>
+    <a id="272" class="Keyword">postulate</a> <a id="B"></a><a id="282" href="Issue2623.html#282" class="Postulate">B</a> <a id="284" class="Symbol">:</a> <a id="286" class="PrimitiveType">Set</a>
 \end{code}<a id="300" class="Comment">
 \end{AgdaMultiCode}
 Even more text.
