--- a/test/LaTeXAndHTML/succeed/Issue2733-1.html
+++ b/test/LaTeXAndHTML/succeed/Issue2733-1.html
@@ -11,8 +11,8 @@ occurrence of \AgdaPrimitiveType{Set} should be aligned with the
 penultimate occurrence of \AgdaPrimitiveType{Set}:
 </a>\begin{code}
   <a id="323" class="Keyword">postulate</a>
-    <a id="A" href="Issue2733-1.html#A" class="Postulate">A</a>  <a id="340" class="Symbol">:</a> <a id="342" class="PrimitiveType">Set</a>
-    <a id="B" href="Issue2733-1.html#B" class="Postulate">B</a>  <a id="353" class="Symbol">:</a> <a id="355" class="PrimitiveType">Set</a> <a id="359" class="Symbol">→</a>
+    <a id="A"></a><a id="337" href="Issue2733-1.html#337" class="Postulate">A</a>  <a id="340" class="Symbol">:</a> <a id="342" class="PrimitiveType">Set</a>
+    <a id="B"></a><a id="350" href="Issue2733-1.html#350" class="Postulate">B</a>  <a id="353" class="Symbol">:</a> <a id="355" class="PrimitiveType">Set</a> <a id="359" class="Symbol">→</a>
          <a id="370" class="PrimitiveType">Set</a>
 \end{code}<a id="384" class="Comment">
 
