--- a/test/LaTeXAndHTML/succeed/Multiline.html
+++ b/test/LaTeXAndHTML/succeed/Multiline.html
@@ -5,8 +5,8 @@
 </a>\begin{code}
 <a id="73" class="Keyword">open</a> <a id="78" class="Keyword">import</a> <a id="85" href="Agda.Builtin.String.html" class="Module">Agda.Builtin.String</a>
 
-<a id="argh" href="Multiline.html#argh" class="Function">argh</a> <a id="111" class="Symbol">:</a> <a id="113" href="Agda.Builtin.String.html#String" class="Postulate">String</a>
-<a id="120" href="Multiline.html#argh" class="Function">argh</a> <a id="125" class="Symbol">=</a>  <a id="128" class="String">&quot;Hello,\
+<a id="argh"></a><a id="106" href="Multiline.html#106" class="Function">argh</a> <a id="111" class="Symbol">:</a> <a id="113" href="Agda.Builtin.String.html#165" class="Postulate">String</a>
+<a id="120" href="Multiline.html#106" class="Function">argh</a> <a id="125" class="Symbol">=</a>  <a id="128" class="String">&quot;Hello,\
         \World!&quot;</a>
 \end{code}<a id="164" class="Comment">
 \end{document}
