--- a/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.html
+++ b/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.html
@@ -11,7 +11,7 @@
 
 </a>\begin{code}
 
-<a id="136" class="Keyword">module</a> <a id="Test2" href="NoNewLinesVsNewLines.html#Test2" class="Module">Test2</a> <a id="149" class="Keyword">where</a>
+<a id="136" class="Keyword">module</a> <a id="Test2"></a><a id="143" href="NoNewLinesVsNewLines.html#143" class="Module">Test2</a> <a id="149" class="Keyword">where</a>
 
 \end{code}<a id="166" class="Comment">
 
