--- a/test/LaTeXAndHTML/succeed/OneSpaceIndent.html
+++ b/test/LaTeXAndHTML/succeed/OneSpaceIndent.html
@@ -15,7 +15,7 @@ Text1
 
 \AgdaHide{
 </a>\begin{code}
-<a id="176" class="Keyword">module</a> <a id="Defs" href="OneSpaceIndent.html#Defs" class="Module">Defs</a> <a id="188" class="Keyword">where</a>
+<a id="176" class="Keyword">module</a> <a id="Defs"></a><a id="183" href="OneSpaceIndent.html#183" class="Module">Defs</a> <a id="188" class="Keyword">where</a>
 
  <a id="196" class="Keyword">postulate</a>
 \end{code}<a id="216" class="Comment">
@@ -24,7 +24,7 @@ Text1
 Text2
 
 </a>\begin{code}
-  <a id="Defs.Base" href="OneSpaceIndent.html#Defs.Base" class="Postulate">Base</a> <a id="247" class="Symbol">:</a> <a id="249" class="PrimitiveType">Set</a>
+  <a id="Defs.Base"></a><a id="242" href="OneSpaceIndent.html#242" class="Postulate">Base</a> <a id="247" class="Symbol">:</a> <a id="249" class="PrimitiveType">Set</a>
 \end{code}<a id="263" class="Comment">
 
 Text3
