--- a/test/LaTeXAndHTML/succeed/PatternSynonyms3.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms3.html
@@ -4,17 +4,17 @@
 \begin{document}
 
 </a>\begin{code}
-<a id="74" class="Keyword">data</a> <a id="Nat" href="PatternSynonyms3.html#Nat" class="Datatype">Nat</a> <a id="83" class="Symbol">:</a> <a id="85" class="PrimitiveType">Set</a> <a id="89" class="Keyword">where</a>
-  <a id="Nat.zero" href="PatternSynonyms3.html#Nat.zero" class="InductiveConstructor">zero</a> <a id="102" class="Symbol">:</a> <a id="104" href="PatternSynonyms3.html#Nat" class="Datatype">Nat</a>
-  <a id="Nat.suc" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor">suc</a> <a id="114" class="Symbol">:</a> <a id="116" href="PatternSynonyms3.html#Nat" class="Datatype">Nat</a> <a id="120" class="Symbol">→</a> <a id="122" href="PatternSynonyms3.html#Nat" class="Datatype">Nat</a>
+<a id="74" class="Keyword">data</a> <a id="Nat"></a><a id="79" href="PatternSynonyms3.html#79" class="Datatype">Nat</a> <a id="83" class="Symbol">:</a> <a id="85" class="PrimitiveType">Set</a> <a id="89" class="Keyword">where</a>
+  <a id="Nat.zero"></a><a id="97" href="PatternSynonyms3.html#97" class="InductiveConstructor">zero</a> <a id="102" class="Symbol">:</a> <a id="104" href="PatternSynonyms3.html#79" class="Datatype">Nat</a>
+  <a id="Nat.suc"></a><a id="110" href="PatternSynonyms3.html#110" class="InductiveConstructor">suc</a> <a id="114" class="Symbol">:</a> <a id="116" href="PatternSynonyms3.html#79" class="Datatype">Nat</a> <a id="120" class="Symbol">→</a> <a id="122" href="PatternSynonyms3.html#79" class="Datatype">Nat</a>
 
-<a id="127" class="Keyword">pattern</a> <a id="two" href="PatternSynonyms3.html#two" class="InductiveConstructor">two</a>   <a id="141" class="Symbol">=</a> <a id="143" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor">suc</a> <a id="147" class="Symbol">(</a><a id="148" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor">suc</a> <a id="152" href="PatternSynonyms3.html#Nat.zero" class="InductiveConstructor">zero</a><a id="156" class="Symbol">)</a>
-<a id="158" class="Keyword">pattern</a> <a id="three" href="PatternSynonyms3.html#three" class="InductiveConstructor">three</a> <a id="172" class="Symbol">=</a> <a id="174" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor">suc</a> <a id="178" href="PatternSynonyms3.html#two" class="InductiveConstructor">two</a>
-<a id="182" class="Keyword">pattern</a> <a id="four" href="PatternSynonyms3.html#four" class="InductiveConstructor">four</a>  <a id="196" class="Symbol">=</a> <a id="198" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor">suc</a> <a id="202" href="PatternSynonyms3.html#three" class="InductiveConstructor">three</a>
+<a id="127" class="Keyword">pattern</a> <a id="two"></a><a id="135" href="PatternSynonyms3.html#135" class="InductiveConstructor">two</a>   <a id="141" class="Symbol">=</a> <a id="143" href="PatternSynonyms3.html#110" class="InductiveConstructor">suc</a> <a id="147" class="Symbol">(</a><a id="148" href="PatternSynonyms3.html#110" class="InductiveConstructor">suc</a> <a id="152" href="PatternSynonyms3.html#97" class="InductiveConstructor">zero</a><a id="156" class="Symbol">)</a>
+<a id="158" class="Keyword">pattern</a> <a id="three"></a><a id="166" href="PatternSynonyms3.html#166" class="InductiveConstructor">three</a> <a id="172" class="Symbol">=</a> <a id="174" href="PatternSynonyms3.html#110" class="InductiveConstructor">suc</a> <a id="178" href="PatternSynonyms3.html#135" class="InductiveConstructor">two</a>
+<a id="182" class="Keyword">pattern</a> <a id="four"></a><a id="190" href="PatternSynonyms3.html#190" class="InductiveConstructor">four</a>  <a id="196" class="Symbol">=</a> <a id="198" href="PatternSynonyms3.html#110" class="InductiveConstructor">suc</a> <a id="202" href="PatternSynonyms3.html#166" class="InductiveConstructor">three</a>
 
-<a id="209" class="Keyword">pattern</a> <a id="five" href="PatternSynonyms3.html#five" class="InductiveConstructor">five</a>  <a id="223" class="Symbol">=</a> <a id="225" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor">suc</a> <a id="229" href="PatternSynonyms3.html#four" class="InductiveConstructor">four</a>
+<a id="209" class="Keyword">pattern</a> <a id="five"></a><a id="217" href="PatternSynonyms3.html#217" class="InductiveConstructor">five</a>  <a id="223" class="Symbol">=</a> <a id="225" href="PatternSynonyms3.html#110" class="InductiveConstructor">suc</a> <a id="229" href="PatternSynonyms3.html#190" class="InductiveConstructor">four</a>
 
-<a id="235" class="Keyword">data</a> <a id="Bot" href="PatternSynonyms3.html#Bot" class="Datatype">Bot</a> <a id="244" class="Symbol">:</a> <a id="246" class="PrimitiveType">Set</a> <a id="250" class="Keyword">where</a>
+<a id="235" class="Keyword">data</a> <a id="Bot"></a><a id="240" href="PatternSynonyms3.html#240" class="Datatype">Bot</a> <a id="244" class="Symbol">:</a> <a id="246" class="PrimitiveType">Set</a> <a id="250" class="Keyword">where</a>
 \end{code}<a id="266" class="Comment">
 
 \end{document}
