--- a/test/LaTeXAndHTML/succeed/Issue2734.html
+++ b/test/LaTeXAndHTML/succeed/Issue2734.html
@@ -12,9 +12,9 @@
 Text.
 </a>\begin{code}
   <a id="154" class="Keyword">postulate</a>
-    <a id="A" href="Issue2734.html#A" class="Postulate">A</a>  <a id="171" class="Symbol">:</a> <a id="173" class="PrimitiveType">Set</a>
+    <a id="A"></a><a id="168" href="Issue2734.html#168" class="Postulate">A</a>  <a id="171" class="Symbol">:</a> <a id="173" class="PrimitiveType">Set</a>
 
-    <a id="B" href="Issue2734.html#B" class="Postulate">B</a>  <a id="185" class="Symbol">:</a> <a id="187" class="PrimitiveType">Set</a>
+    <a id="B"></a><a id="182" href="Issue2734.html#182" class="Postulate">B</a>  <a id="185" class="Symbol">:</a> <a id="187" class="PrimitiveType">Set</a>
 \end{code}<a id="201" class="Comment">
 More text.
 
