[ #3120 ] Forgot html and latex tests

--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.html
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.html
@@ -56,11 +56,11 @@
 <a id="824" class="Keyword">module</a> <a id="M"></a><a id="831" href="LaTeX-succeed.html#831" class="Module">M</a> <a id="833" class="Keyword">where</a>
   <a id="M.r′"></a><a id="841" href="LaTeX-succeed.html#841" class="Function">r′</a> <a id="844" class="Symbol">:</a> <a id="846" class="Symbol">∀</a> <a id="848" class="Symbol">{</a><a id="849" href="LaTeX-succeed.html#849" class="Bound">A</a> <a id="851" href="LaTeX-succeed.html#851" class="Bound">B</a> <a id="853" class="Symbol">:</a> <a id="855" class="PrimitiveType">Set</a><a id="858" class="Symbol">}</a> <a id="860" class="Symbol">→</a> <a id="862" href="LaTeX-succeed.html#726" class="Record">R′</a> <a id="865" href="LaTeX-succeed.html#849" class="Bound">A</a> <a id="867" href="LaTeX-succeed.html#851" class="Bound">B</a>
   <a id="871" href="LaTeX-succeed.html#841" class="Function">r′</a> <a id="874" class="Symbol">=</a> <a id="876" class="Keyword">record</a>
-    <a id="887" class="Symbol">{</a> <a id="889" class="Field">h</a>  <a id="892" class="Symbol">=</a> <a id="894" href="LaTeX-succeed.html#647" class="Datatype">⊥</a>
-    <a id="900" class="Symbol">;</a> <a id="902" class="Field">j</a>  <a id="905" class="Symbol">=</a> <a id="907" href="LaTeX-succeed.html#647" class="Datatype">⊥</a>
-    <a id="913" class="Symbol">;</a> <a id="915" class="Field">r</a> <a id="917" class="Symbol">=</a> <a id="919" class="Keyword">record</a>
-        <a id="934" class="Symbol">{</a> <a id="936" class="Field">f</a>  <a id="939" class="Symbol">=</a> <a id="941" href="LaTeX-succeed.html#647" class="Datatype">⊥</a>
-        <a id="951" class="Symbol">;</a> <a id="953" class="Field">g</a>  <a id="956" class="Symbol">=</a> <a id="958" href="LaTeX-succeed.html#647" class="Datatype">⊥</a>
+    <a id="887" class="Symbol">{</a> <a id="889" href="LaTeX-succeed.html#766" class="Field">h</a>  <a id="892" class="Symbol">=</a> <a id="894" href="LaTeX-succeed.html#647" class="Datatype">⊥</a>
+    <a id="900" class="Symbol">;</a> <a id="902" href="LaTeX-succeed.html#779" class="Field">j</a>  <a id="905" class="Symbol">=</a> <a id="907" href="LaTeX-succeed.html#647" class="Datatype">⊥</a>
+    <a id="913" class="Symbol">;</a> <a id="915" href="LaTeX-succeed.html#792" class="Field">r</a> <a id="917" class="Symbol">=</a> <a id="919" class="Keyword">record</a>
+        <a id="934" class="Symbol">{</a> <a id="936" href="LaTeX-succeed.html#696" class="Field">f</a>  <a id="939" class="Symbol">=</a> <a id="941" href="LaTeX-succeed.html#647" class="Datatype">⊥</a>
+        <a id="951" class="Symbol">;</a> <a id="953" href="LaTeX-succeed.html#709" class="Field">g</a>  <a id="956" class="Symbol">=</a> <a id="958" href="LaTeX-succeed.html#647" class="Datatype">⊥</a>
         <a id="968" class="Symbol">}</a>
     <a id="974" class="Symbol">}</a>
 \end{code}<a id="986" class="Comment">
