--- a/test/LaTeXAndHTML/succeed/Issue982.html
+++ b/test/LaTeXAndHTML/succeed/Issue982.html
@@ -1,33 +1,5 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue982</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Testing with Ubuntu 14.04.
-
-% For testing this issue it is necessary to install the following
-% packages:
-
-%  sudo apt-get install texlive
-%  sudo apt-get install texlive-latex-extra
-%  sudo apt-get install texlive-xetex
-%  sudo apt-get install texlive-math-extra
-%  sudo apt-get install texlive-fonts-extra
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Testing with Ubuntu 12.04.
-
-% Ubuntu 12.04 uses an outdated TeX Live 2009. For testing this issue
-% it is necessary to install the following packages:
-
-%  sudo add-apt-repository ppa:texlive-backports/ppa -y
-%  sudo apt-get update
-%  sudo apt-get install texlive
-%  sudo apt-get install texlive-latex-extra
-%  sudo apt-get install texlive-xetex
-%  sudo apt-get install texlive-math-extra
-%  sudo apt-get install texlive-fonts-extra
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue982</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
 
 \usepackage{agda}
 
@@ -36,21 +8,21 @@
 %\renewcommand{\AgdaIndent}{\;\;}
 
 </a>\begin{code}
-<a id="1095" class="Keyword">record</a> <a id="Sigma"></a><a id="1102" href="Issue982.html#1102" class="Record">Sigma</a> <a id="1108" class="Symbol">(</a><a id="1109" href="Issue982.html#1109" class="Bound">A</a> <a id="1111" class="Symbol">:</a> <a id="1113" class="PrimitiveType">Set</a><a id="1116" class="Symbol">)</a> <a id="1118" class="Symbol">(</a><a id="1119" href="Issue982.html#1119" class="Bound">B</a> <a id="1121" class="Symbol">:</a> <a id="1123" href="Issue982.html#1109" class="Bound">A</a> <a id="1125" class="Symbol">→</a> <a id="1127" class="PrimitiveType">Set</a><a id="1130" class="Symbol">)</a> <a id="1132" class="Symbol">:</a> <a id="1134" class="PrimitiveType">Set</a> <a id="1138" class="Keyword">where</a>
-  <a id="1146" class="Keyword">constructor</a> <a id="Sigma._,_"></a><a id="1158" href="Issue982.html#1158" class="InductiveConstructor Operator">_,_</a>
-  <a id="1164" class="Keyword">field</a>
-    <a id="Sigma.proj₁"></a><a id="1174" href="Issue982.html#1174" class="Field">proj₁</a> <a id="1180" class="Symbol">:</a> <a id="1182" href="Issue982.html#1109" class="Bound">A</a>
-    <a id="Sigma.proj₂"></a><a id="1188" href="Issue982.html#1188" class="Field">proj₂</a> <a id="1194" class="Symbol">:</a> <a id="1196" href="Issue982.html#1119" class="Bound">B</a> <a id="1198" href="Issue982.html#1174" class="Field">proj₁</a>
+<a id="111" class="Keyword">record</a> <a id="Sigma"></a><a id="118" href="Issue982.html#118" class="Record">Sigma</a> <a id="124" class="Symbol">(</a><a id="125" href="Issue982.html#125" class="Bound">A</a> <a id="127" class="Symbol">:</a> <a id="129" class="PrimitiveType">Set</a><a id="132" class="Symbol">)</a> <a id="134" class="Symbol">(</a><a id="135" href="Issue982.html#135" class="Bound">B</a> <a id="137" class="Symbol">:</a> <a id="139" href="Issue982.html#125" class="Bound">A</a> <a id="141" class="Symbol">→</a> <a id="143" class="PrimitiveType">Set</a><a id="146" class="Symbol">)</a> <a id="148" class="Symbol">:</a> <a id="150" class="PrimitiveType">Set</a> <a id="154" class="Keyword">where</a>
+  <a id="162" class="Keyword">constructor</a> <a id="Sigma._,_"></a><a id="174" href="Issue982.html#174" class="InductiveConstructor Operator">_,_</a>
+  <a id="180" class="Keyword">field</a>
+    <a id="Sigma.proj₁"></a><a id="190" href="Issue982.html#190" class="Field">proj₁</a> <a id="196" class="Symbol">:</a> <a id="198" href="Issue982.html#125" class="Bound">A</a>
+    <a id="Sigma.proj₂"></a><a id="204" href="Issue982.html#204" class="Field">proj₂</a> <a id="210" class="Symbol">:</a> <a id="212" href="Issue982.html#135" class="Bound">B</a> <a id="214" href="Issue982.html#190" class="Field">proj₁</a>
 
-<a id="1205" class="Keyword">open</a> <a id="1210" href="Issue982.html#1102" class="Module">Sigma</a> <a id="1216" class="Keyword">public</a>
-\end{code}<a id="1233" class="Comment">
+<a id="221" class="Keyword">open</a> <a id="226" href="Issue982.html#118" class="Module">Sigma</a> <a id="232" class="Keyword">public</a>
+\end{code}<a id="249" class="Comment">
 
 </a>\begin{code}
-<a id="uncurry"></a><a id="1248" href="Issue982.html#1248" class="Function">uncurry</a> <a id="1256" class="Symbol">:</a> <a id="1258" class="Symbol">{</a><a id="1259" href="Issue982.html#1259" class="Bound">A</a> <a id="1261" class="Symbol">:</a> <a id="1263" class="PrimitiveType">Set</a><a id="1266" class="Symbol">}</a> <a id="1268" class="Symbol">{</a><a id="1269" href="Issue982.html#1269" class="Bound">B</a> <a id="1271" class="Symbol">:</a> <a id="1273" href="Issue982.html#1259" class="Bound">A</a> <a id="1275" class="Symbol">→</a> <a id="1277" class="PrimitiveType">Set</a><a id="1280" class="Symbol">}</a> <a id="1282" class="Symbol">{</a><a id="1283" href="Issue982.html#1283" class="Bound">C</a> <a id="1285" class="Symbol">:</a> <a id="1287" href="Issue982.html#1102" class="Record">Sigma</a> <a id="1293" href="Issue982.html#1259" class="Bound">A</a> <a id="1295" href="Issue982.html#1269" class="Bound">B</a> <a id="1297" class="Symbol">→</a> <a id="1299" class="PrimitiveType">Set</a><a id="1302" class="Symbol">}</a> <a id="1304" class="Symbol">→</a>
-          <a id="1316" class="Symbol">((</a><a id="1318" href="Issue982.html#1318" class="Bound">x</a> <a id="1320" class="Symbol">:</a> <a id="1322" href="Issue982.html#1259" class="Bound">A</a><a id="1323" class="Symbol">)</a> <a id="1325" class="Symbol">→</a> <a id="1327" class="Symbol">(</a><a id="1328" href="Issue982.html#1328" class="Bound">y</a> <a id="1330" class="Symbol">:</a> <a id="1332" href="Issue982.html#1269" class="Bound">B</a> <a id="1334" href="Issue982.html#1318" class="Bound">x</a><a id="1335" class="Symbol">)</a> <a id="1337" class="Symbol">→</a> <a id="1339" href="Issue982.html#1283" class="Bound">C</a> <a id="1341" class="Symbol">(</a><a id="1342" href="Issue982.html#1318" class="Bound">x</a> <a id="1344" href="Issue982.html#1158" class="InductiveConstructor Operator">,</a> <a id="1346" href="Issue982.html#1328" class="Bound">y</a><a id="1347" class="Symbol">))</a> <a id="1350" class="Symbol">→</a>
-          <a id="1362" class="Symbol">((</a><a id="1364" href="Issue982.html#1364" class="Bound">p</a> <a id="1366" class="Symbol">:</a> <a id="1368" href="Issue982.html#1102" class="Record">Sigma</a> <a id="1374" href="Issue982.html#1259" class="Bound">A</a> <a id="1376" href="Issue982.html#1269" class="Bound">B</a><a id="1377" class="Symbol">)</a> <a id="1379" class="Symbol">→</a> <a id="1381" href="Issue982.html#1283" class="Bound">C</a> <a id="1383" href="Issue982.html#1364" class="Bound">p</a><a id="1384" class="Symbol">)</a>
-<a id="1386" href="Issue982.html#1248" class="Function">uncurry</a> <a id="1394" href="Issue982.html#1394" class="Bound">f</a> <a id="1396" class="Symbol">(</a><a id="1397" href="Issue982.html#1397" class="Bound">x</a> <a id="1399" href="Issue982.html#1158" class="InductiveConstructor Operator">,</a> <a id="1401" href="Issue982.html#1401" class="Bound">y</a><a id="1402" class="Symbol">)</a> <a id="1404" class="Symbol">=</a> <a id="1406" href="Issue982.html#1394" class="Bound">f</a> <a id="1408" href="Issue982.html#1397" class="Bound">x</a> <a id="1410" href="Issue982.html#1401" class="Bound">y</a>
-\end{code}<a id="1422" class="Comment">
+<a id="uncurry"></a><a id="264" href="Issue982.html#264" class="Function">uncurry</a> <a id="272" class="Symbol">:</a> <a id="274" class="Symbol">{</a><a id="275" href="Issue982.html#275" class="Bound">A</a> <a id="277" class="Symbol">:</a> <a id="279" class="PrimitiveType">Set</a><a id="282" class="Symbol">}</a> <a id="284" class="Symbol">{</a><a id="285" href="Issue982.html#285" class="Bound">B</a> <a id="287" class="Symbol">:</a> <a id="289" href="Issue982.html#275" class="Bound">A</a> <a id="291" class="Symbol">→</a> <a id="293" class="PrimitiveType">Set</a><a id="296" class="Symbol">}</a> <a id="298" class="Symbol">{</a><a id="299" href="Issue982.html#299" class="Bound">C</a> <a id="301" class="Symbol">:</a> <a id="303" href="Issue982.html#118" class="Record">Sigma</a> <a id="309" href="Issue982.html#275" class="Bound">A</a> <a id="311" href="Issue982.html#285" class="Bound">B</a> <a id="313" class="Symbol">→</a> <a id="315" class="PrimitiveType">Set</a><a id="318" class="Symbol">}</a> <a id="320" class="Symbol">→</a>
+          <a id="332" class="Symbol">((</a><a id="334" href="Issue982.html#334" class="Bound">x</a> <a id="336" class="Symbol">:</a> <a id="338" href="Issue982.html#275" class="Bound">A</a><a id="339" class="Symbol">)</a> <a id="341" class="Symbol">→</a> <a id="343" class="Symbol">(</a><a id="344" href="Issue982.html#344" class="Bound">y</a> <a id="346" class="Symbol">:</a> <a id="348" href="Issue982.html#285" class="Bound">B</a> <a id="350" href="Issue982.html#334" class="Bound">x</a><a id="351" class="Symbol">)</a> <a id="353" class="Symbol">→</a> <a id="355" href="Issue982.html#299" class="Bound">C</a> <a id="357" class="Symbol">(</a><a id="358" href="Issue982.html#334" class="Bound">x</a> <a id="360" href="Issue982.html#174" class="InductiveConstructor Operator">,</a> <a id="362" href="Issue982.html#344" class="Bound">y</a><a id="363" class="Symbol">))</a> <a id="366" class="Symbol">→</a>
+          <a id="378" class="Symbol">((</a><a id="380" href="Issue982.html#380" class="Bound">p</a> <a id="382" class="Symbol">:</a> <a id="384" href="Issue982.html#118" class="Record">Sigma</a> <a id="390" href="Issue982.html#275" class="Bound">A</a> <a id="392" href="Issue982.html#285" class="Bound">B</a><a id="393" class="Symbol">)</a> <a id="395" class="Symbol">→</a> <a id="397" href="Issue982.html#299" class="Bound">C</a> <a id="399" href="Issue982.html#380" class="Bound">p</a><a id="400" class="Symbol">)</a>
+<a id="402" href="Issue982.html#264" class="Function">uncurry</a> <a id="410" href="Issue982.html#410" class="Bound">f</a> <a id="412" class="Symbol">(</a><a id="413" href="Issue982.html#413" class="Bound">x</a> <a id="415" href="Issue982.html#174" class="InductiveConstructor Operator">,</a> <a id="417" href="Issue982.html#417" class="Bound">y</a><a id="418" class="Symbol">)</a> <a id="420" class="Symbol">=</a> <a id="422" href="Issue982.html#410" class="Bound">f</a> <a id="424" href="Issue982.html#413" class="Bound">x</a> <a id="426" href="Issue982.html#417" class="Bound">y</a>
+\end{code}<a id="438" class="Comment">
 
 \end{document}
 </a></pre></body></html>
