[ test ] Fix typo

--- a/test/LaTeXAndHTML/succeed/MdHighlightCode.html
+++ b/test/LaTeXAndHTML/succeed/MdHighlightCode.html
@@ -8,13 +8,13 @@
 
 > Jojo! This is the last of my hamon! Take it from me!!
 
-**Everything above should be reserved**
+**Everything above should be preserved**
 
 ```haskell
 module Kira where
 data KillerQueue
 
--- this code should be reserved
+-- this code should be preserved
 ```
 
 <pre class="agda-code"><a id="251" class="Keyword">module</a> <a id="258" href="MdHighlightCode.html" class="Module">MdHighlightCode</a> <a id="274" class="Keyword">where</a>
