[ #2452 ] More highlighting for and better typesetting of pragmas.

--- a/test/LaTeXAndHTML/succeed/Grapheme-clusters-with-pragma.html
+++ b/test/LaTeXAndHTML/succeed/Grapheme-clusters-with-pragma.html
@@ -5,7 +5,7 @@
 
 % Make sure that cluster counting is activated.
 </a><a id="93" class="Markup">\begin{code}[hide]</a>
-  <a id="114" class="Symbol">{-#</a> <a id="118" class="Keyword">OPTIONS</a> <a id="126" class="Option">--count-clusters</a> <a id="143" class="Symbol">#-}</a>
+  <a id="114" class="Symbol">{-#</a> <a id="118" class="Keyword">OPTIONS</a> <a id="126" class="Pragma">--count-clusters</a> <a id="143" class="Symbol">#-}</a>
 <a id="147" class="Markup">\end{code}</a><a id="157" class="Background">
 
 \begin{document}
