--- a/test/LaTeXAndHTML/succeed/Issue2474.html
+++ b/test/LaTeXAndHTML/succeed/Issue2474.html
@@ -4,7 +4,7 @@
 \begin{document}
 
 </a><a id="61" class="Markup">\begin{code}</a>
-<a id="74" class="Symbol">{-#</a> <a id="78" class="Keyword">OPTIONS</a> <a id="86" class="Option">--allow-unsolved-metas</a> <a id="109" class="Symbol">#-}</a>
+<a id="74" class="Symbol">{-#</a> <a id="78" class="Keyword">OPTIONS</a> <a id="86" class="Pragma">--allow-unsolved-metas</a> <a id="109" class="Symbol">#-}</a>
 
 <a id="114" class="Keyword">postulate</a>
   <a id="F"></a><a id="126" href="Issue2474.html#126" class="Postulate">F</a> <a id="128" class="Symbol">:</a> <a id="130" class="Symbol">{</a><a id="131" href="Issue2474.html#131" class="Bound">_</a> <a id="133" class="Symbol">:</a> <a id="135" class="PrimitiveType">Set</a><a id="138" class="Symbol">}</a> <a id="140" class="Symbol">→</a> <a id="142" class="PrimitiveType">Set</a>
